# brownfield-cartographer

./: .dockerignore  .gitignore  Dockerfile  README.md  RECONNAISSANCE.md  app.py  docker-compose.yml  pyproject.toml  temp_diff.txt
.cartography/: CODEBASE.md  budget_summary.json  domain_map.json  drift_flags.json  lineage_graph.json  module_graph.json  onboarding_brief.md  onboarding_brief_make-open-data.md  onboarding_brief_ol-data-platform.md  purpose_statements.json  semantic_cache.json  state.json
.github/workflows/: ci.yml
report/: arc.md  architecture_diagram.md  final_report.md  interim_report.md
src/: cli.py  logger.py  orchestrator.py  path_utils.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  git_analyzer.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: schemas.py
tests/: test_agents_and_analyzers.py  test_cli_and_navigator.py  test_dag_config_parser.py  test_orchestrator.py  test_p0_p1.py
