[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "A codebase intelligence tool that analyzes repositories and maps their structure and data flow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "networkx",
    "numpy>=2.2.6",
    "pydantic",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "sqlglot",
    "tree-sitter",
    "tree-sitter-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
